--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,17 @@
       android:theme="@style/AppTheme">
     <activity
         android:name=".login.LoginActivity"
-        android:label="@string/app_name"
-        >
+        android:label="@string/app_name">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
+    </activity>
+    <activity
+        android:name=".profile.ProfileActivity"
+        android:label="@string/title_activity_profile"
+        android:theme="@style/AppTheme">
     </activity>
   </application>
 
