--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
       android:theme="@style/AppTheme">
     <activity
         android:name=".login.LoginActivity"
-        android:label="@string/app_name">
+        android:label="@string/app_name"
+        android:screenOrientation="portrait"
+        android:windowSoftInputMode="adjustPan"
+        >
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
@@ -22,7 +25,11 @@
     <activity
         android:name=".profile.ProfileActivity"
         android:label="@string/title_activity_profile"
-        android:theme="@style/AppTheme">
+        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme"
+        android:windowSoftInputMode="adjustPan"
+
+        >
     </activity>
   </application>
 
